--- a/ArduCopter/ReleaseNotes.txt
+++ b/ArduCopter/ReleaseNotes.txt
@@ -28,6 +28,7 @@ Changes from 4.1.0-beta1
     e) Harmonic notch support for CAN ESCs (KDECAN, PiccoloCAN, ToshibaCAN, UAVCAN)
     f) OSD gets fence icon
     g) RunCam OSD and camera control
+    h) Septentrio GPSs support GPS_SBAS_MOD parameter
 6) Bug fixes
     a) Barometer averaging fixes for BMP380, BMP280, LPS2XH, SPL06 drivers
     b) EKF3 fix to reset yaw after GPS-for-yaw recovers
