--- a/Rover/release-notes.txt
+++ b/Rover/release-notes.txt
@@ -1,5 +1,9 @@
 Rover Release Notes:
 --------------------------------
+Rover 4.1.0-beta3 24-May-2021
+Changes from 4.1.0-beta2
+1) Dshot bug fix for autopilots with I/O boards (CubeBlack, CubeOrange, etc)
+--------------------------------
 Rover 4.1.0-beta2 20-May-2021
 Changes from 4.1.0-beta1
 1) Rover/Boat specific enhancements and bug fixes
